новые изменения + разные todo для доделования